# diskspice

./: .gitignore  AGENTS.md  Makefile  SPEC.md
.claude/: settings.local.json
DiskSpice/DiskSpice/: ContentView.swift  DiskSpiceApp.swift  Info.plist
DiskSpice/DiskSpice.xcodeproj/: project.pbxproj
DiskSpice/DiskSpice/App/: AppState.swift  DiskSpiceApp.swift
DiskSpice/DiskSpice/Models/: FileNode.swift  NavigationState.swift  VolumeInfo.swift
DiskSpice/DiskSpice/Services/: DebugLogger.swift  FileOperations.swift  MockScanner.swift  RustScanner.swift  ScanCoordinator.swift  ScanQueue.swift  ScannerProtocol.swift  SwiftScanner.swift  VolumeManager.swift
DiskSpice/DiskSpice/Views/: ContentView.swift
DiskSpice/Scanner/: build-scanner.sh
DiskSpice/Scanner/diskspice-scanner/: Cargo.toml
DiskSpice/Scanner/diskspice-scanner/src/: lib.rs  main.rs  scanner.rs
DiskSpice/docs/: DEBUGGING.md
docs/: SQUIRRELDISK_SPEED_LEARNINGS.md
plans/: RALPH_INSTRUCTIONS.md  README.md  TICKETS.md
plans/tickets/complete/: 001-two-phase-sizing.md  001-xcode-project-setup.md  002-budgeted-directory-scan.md  002-project-structure.md  003-core-data-models.md  004-focus-depth-first-background-breadth.md  004-scanner-protocol.md  005-concurrency-backpressure.md  007-metadata-shortcuts.md  015-navigation-state-management.md  016-squarified-treemap-algorithm.md  017-canvas-treemap-renderer.md  020-treemap-zoom-animation.md  021-small-items-grouping.md  023-list-row-polish.md  025-click-to-refresh.md  027-scanner-ui-integration.md  028-progressive-updates.md  029-error-handling.md  (+16 more)
(+43 files in other folders)
