[package]
name = "diskspice-scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "diskspice-scan"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
